--- a/gmccareadmin/src/main/res/layout/fragment_ruangan.xml
+++ b/gmccareadmin/src/main/res/layout/fragment_ruangan.xml
@@ -39,6 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_room">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -46,11 +47,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_room_1"
@@ -108,6 +111,20 @@
                     app:layout_constraintStart_toEndOf="@+id/highligt1"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama1" />
 
+                <TextView
+                    android:id="@+id/tv_timer1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik1"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik1"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -126,6 +143,7 @@
             app:layout_constraintTop_toBottomOf="@+id/box_room_1">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -133,11 +151,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_room_2"
@@ -195,6 +215,20 @@
                     app:layout_constraintStart_toEndOf="@+id/highligt2"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama2" />
 
+                <TextView
+                    android:id="@+id/tv_timer2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik2"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik2"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -214,6 +248,7 @@
             app:layout_constraintTop_toBottomOf="@+id/box_room_2">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -221,7 +256,9 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
@@ -283,6 +320,20 @@
                     app:layout_constraintStart_toEndOf="@+id/highligt3"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama3" />
 
+                <TextView
+                    android:id="@+id/tv_timer3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik3"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik3"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -302,6 +353,7 @@
             app:layout_constraintTop_toBottomOf="@+id/box_room_3">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -309,11 +361,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt4"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_room_4"
@@ -371,6 +425,20 @@
                     app:layout_constraintStart_toEndOf="@+id/highligt4"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama4" />
 
+                <TextView
+                    android:id="@+id/tv_timer4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik4"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik4"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -390,6 +458,7 @@
             app:layout_constraintTop_toBottomOf="@+id/box_room_4">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -397,11 +466,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt5"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_room_5"
@@ -459,6 +530,20 @@
                     app:layout_constraintStart_toEndOf="@+id/highligt5"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama5" />
 
+                <TextView
+                    android:id="@+id/tv_timer5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik5"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik5"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -478,6 +563,7 @@
             app:layout_constraintTop_toBottomOf="@+id/box_room_5">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/btn_ruang6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -485,11 +571,13 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/highligt6"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:background="@color/colorPrimary"
                     android:backgroundTint="@color/colorHighlight"
                     android:paddingHorizontal="8dp"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_room_6"
@@ -546,6 +634,19 @@
                     android:textSize="14sp"
                     app:layout_constraintStart_toEndOf="@+id/highligt6"
                     app:layout_constraintTop_toBottomOf="@id/tv_nama6" />
+                <TextView
+                    android:id="@+id/tv_timer6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tv_nik6"
+                    app:layout_constraintStart_toStartOf="@id/tv_nik6"
+                    android:text="waktu"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="6dp"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginTop="3dp"
+                    />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
