--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context=".screen.login.LoginFragment">
 
     <FrameLayout
@@ -103,7 +104,7 @@
 
         <EditText
             android:id="@+id/et_birth_date"
-            android:layout_width="260dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
             android:ems="10"
@@ -112,6 +113,7 @@
             android:inputType="date"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@id/tv_tl"
+            app:layout_constraintEnd_toStartOf="@id/btnSetBirthDate"
             app:layout_constraintTop_toBottomOf="@+id/tv_tl" />
 
         <ImageButton
@@ -122,7 +124,7 @@
             android:backgroundTint="@android:color/transparent"
             android:src="@drawable/ic_baseline_date"
             app:layout_constraintBottom_toBottomOf="@id/et_birth_date"
-            app:layout_constraintStart_toEndOf="@id/et_birth_date"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/et_birth_date" />
 
         <TextView
@@ -202,7 +204,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
             android:fontFamily="@font/montserrat_medium"
-            android:hint="Must have at least 8 character"
+            android:hint="Minimal 8 karakter"
             android:inputType="textPassword"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@id/tv_pass"
