--- a/gmccareadmin/src/main/res/layout/row_item_queue.xml
+++ b/gmccareadmin/src/main/res/layout/row_item_queue.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/box_room_1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,17 +12,16 @@
     android:padding="8dp"
     app:cardCornerRadius="12dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tv_room" 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:layout_constraintTop_toBottomOf="@+id/tv_room">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/highligt1"
+            android:id="@+id/highlight1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
@@ -70,7 +70,7 @@
             android:text="Muhammad Rizy Khairullah"
             android:textColor="@color/colorWhite"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/highligt1"
+            app:layout_constraintStart_toEndOf="@+id/highlight1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -82,7 +82,7 @@
             android:text="1234567890123456"
             android:textColor="@color/colorWhite"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/highligt1"
+            app:layout_constraintStart_toEndOf="@+id/highlight1"
             app:layout_constraintTop_toBottomOf="@id/tvNama" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
