--- a/gmccareadmin/src/main/res/layout/activity_cancel_timer.xml
+++ b/gmccareadmin/src/main/res/layout/activity_cancel_timer.xml
@@ -1,50 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".ConfirmationActivity">
 
     <TextView
         android:id="@+id/teks1"
-        android:layout_marginTop="100dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:text="Apakah pasien dengan no antrian"
-        android:textAlignment="center"/>
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/nomor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/montserrat_bold"
         android:textSize="40sp"
-        app:layout_constraintTop_toBottomOf="@id/teks1"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="A17"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:text="A17" />
 
     <TextView
         android:id="@+id/teks3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nomor"
-        android:text="sudah datang ke ruang"/>
-
+        android:text="sudah datang ke ruang" />
 
     <Button
+        android:id="@+id/btn_ya"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/teks3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Ya, Matikan timer"
-        android:id="@+id/btn_ya"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginTop="32dp"
+        android:text="Ya, Matikan timer" />
+</LinearLayout>
